fix: Subscribe boxes on mobile

--- a/src/components/subscribe/index.scss
+++ b/src/components/subscribe/index.scss
@@ -51,3 +51,12 @@ div.tiers {
     background: $oc-violet-4;
   }
 }
+
+@media (max-width: 959px) {
+  div.tiers div.tier {
+    width: 100%;
+    p {
+      min-height: inherit;
+    }
+  }
+}
